k8s/apps/gatus/networking/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gatus
  namespace: gatus
  labels:
    app.kubernetes.io/name: gatus
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: gatus
