k8s/apps/gatus/networking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gatus
  namespace: gatus
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - uptime.int.jigga.xyz
      secretName: gatus-tls
  rules:
    - host: uptime.int.jigga.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gatus
                port:
                  name: http
